--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 @import url("//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700");
 html {
@@ -3966,7 +3967,7 @@ tbody.collapse.in {
   .breadcrumb > li {
     display: inline-block; }
     .breadcrumb > li + li:before {
-      content: /\00a0;
+      content: "/ ";
       padding: 0 5px;
       color: #ccc; }
   .breadcrumb > .active {
@@ -5752,5 +5753,22 @@ a.list-group-item-danger.active:hover, a.list-group-item-danger.active:focus {
 
 .popover {
   color: #333333; }
+
+body {
+  padding-top: 50px; }
+
+.container.global-container {
+  margin-top: 50px; }
+
+.panel .panel-title {
+  font-weight: bold; }
+.panel .col-lg-bold {
+  font-weight: bold; }
+
+@media (min-width: 768px) {
+  .form-horizontal .control-label {
+    text-align: left; } }
+.form-horizontal span.required {
+  color: #FF0039; }
 
 /*# sourceMappingURL=main.css.map */
