--- a/src/main/resources/assets/css/custom.scss
+++ b/src/main/resources/assets/css/custom.scss
@@ -10,6 +10,14 @@ body {
 	}
 }
 
+.no-padding {
+	padding: 0;
+}
+
+.overflow {
+	overflow: auto;
+}
+
 .panel {
 	.panel-title {
 		font-weight: bold;
